--- a/landing/index.html
+++ b/landing/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main-landing.jsx"></script>
+    <script type="module" src="../src/main-landing.jsx"></script>
   </body>
   </html>
 
